# mybot

./: FULL_README.md  RELEASE_NOTES.md  SUMMARY.md  demo.py  pyproject.toml  requirements.txt  setup_instructions.md  test_basic.py
src/: __init__.py  main.py
src/agents/: __init__.py  manager.py
src/api/: gateway.py
src/channels/: generic.py  manager.py
src/core/: config.py  gateway.py
src/memory/: manager.py
src/tools/: builtin.py  registry.py
