[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawdbot-python"
version = "0.1.0"
description = "Python version of Clawdbot - A multi-channel AI assistant gateway"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=10.0",
    "requests>=2.28.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "websockets>=10.0",
    "pillow>=9.0.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.0.0",
    "pyjwt>=2.6.0",
    "aiosqlite>=0.19.0",
    "redis>=4.5.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "tiktoken>=0.5.0",
    "langchain>=0.0.300",
    "langchain-community>=0.0.15",
    "langchain-openai>=0.0.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.10.0"
]

[project.urls]
Homepage = "https://github.com/tonylaobai/clawdbot-python"
Repository = "https://github.com/tonylaobai/clawdbot-python"